Updated base generic

--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  
-  <!-- Add additional CSS in static file -->
-  {% load static %}
+<title>Goombay Smash Run</title>
+
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Bootstrap Theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- JS -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
-
 <body>
+  <header>
+    <nav class="navbar navbar-default navbar-fixed-top" style="">
+      <ul class="nav navbar-nav navbar-right" >
+        <li><a href = "/" class="btn btn-default btn-lg active" role="button">Home</a></li>
+        <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">Trips</a></li>
+        <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
+        <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
+        <li><a href = "/persons/" class="btn btn-default btn-lg active" role = "button">People</a></li>
+        <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
+      </ul>
+    </nav>
+  </header>
 
-  <div class="container-fluid">
-      </div>
-      <div class="col-sm-10 ">
-      {% block content %}{% endblock %}
+  <div class="container-fluid"  style="margin-top: 100px; ">
+      <h2>Main container</h2>
+      <div class="col-sm-10 ">{% block content %}{% endblock %}    
       </div>
     </div>
-
-  </div>
 </body>
 </html>
