Added view all functionality for people -- modified unit testing

--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -25,7 +25,7 @@
         <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">Trips</a></li>
         <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
         <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
-        <li><a href = "/persons/" class="btn btn-default btn-lg active" role = "button">People</a></li>
+        <li><a href = "/people/" class="btn btn-default btn-lg active" role = "button">People</a></li>
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
       </ul>
     </nav>
