Cookies for signup, home redirect.

--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -22,11 +22,14 @@
     <nav class="navbar navbar-default navbar-fixed-top" style="">
       <ul class="nav navbar-nav navbar-right" >
         <li><a href = "/" class="btn btn-default btn-lg active" role="button">Home</a></li>
+        <li><a href = "/people/" class="btn btn-default btn-lg active" role = "button">People</a></li>
         <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">Trips</a></li>
         <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
         <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
-        <li><a href = "/people/" class="btn btn-default btn-lg active" role = "button">People</a></li>
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
+        <li><a href = "/signup/" class="btn btn-default btn-lg active" role = "button">Sign Up</a></li>
+        <li><a href = "/login/" class="btn btn-default btn-lg active" role = "button">Login</a></li>
+
       </ul>
     </nav>
   </header>
