--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -29,7 +29,7 @@
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
         <li><a href = "/signup/" class="btn btn-default btn-lg active" role = "button">Sign Up</a></li>
         <li><a href = "/login/" class="btn btn-default btn-lg active" role = "button">Login</a></li>
-
+        <li><a href = "/logout/" class="btn btn-default btn-lg active" role = "button">Logout</a></li>
       </ul>
     </nav>
   </header>
