--- a/web/myapp/templates/index.html
+++ b/web/myapp/templates/index.html
@@ -15,4 +15,8 @@
 <p>To view all placed orders, look at orders.</p>
 <p>Checkout all the beers you can order under the beers tab!</p>
 
+{% if error %}
+{{ error }}
+{% endif %}
+
 {% endblock %}
