--- a/web/myapp/templates/index.html
+++ b/web/myapp/templates/index.html
@@ -1,6 +1,13 @@
 {% extends "base_generic.html" %}
 {% block content %}
 
+
+{% if error %}
+	<h1><strong> {{ error }} </strong></h1>
+	<br>
+{% endif %}
+
+
 {% if username %}
 <h1> Welcome {{username}}! </h1>
 {% endif %}
@@ -15,8 +22,6 @@
 <p>To view all placed orders, look at orders.</p>
 <p>Checkout all the beers you can order under the beers tab!</p>
 
-{% if error %}
-{{ error }}
-{% endif %}
+
 
 {% endblock %}
