--- a/web/myapp/templates/trips.html
+++ b/web/myapp/templates/trips.html
@@ -1,7 +1,7 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-{% for trip,pk in full_list.items %}
+{% for pk, trip in full_list.items %}
 <a href="/trip/{{ pk }}"><h2>{{ trip }} current trip.</h2></a>
 {% endfor %}
 {% endblock %}
