--- a/web/myapp/templates/orderForm.html
+++ b/web/myapp/templates/orderForm.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<h1>What would you like to order?</h1>
+<br>
 <form method="post" action="{% url 'createOrder' %}">
 {% csrf_token %}
 
