--- a/web/myapp/templates/order_detail_view.html
+++ b/web/myapp/templates/order_detail_view.html
@@ -4,4 +4,5 @@
 
   <p><strong>Buyer Name: </strong> {{ buyer }}</p>
   <p><strong>Item:</strong> {{ item }}</p> 
+  <p><strong>Trip:</strong> {{ order_trip }}
 {% endblock %}
