--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -32,13 +32,13 @@
 <body>
   <header>
     <nav class="navbar navbar-default navbar-fixed-top" style="">
-     <form method="post" action="{% url 'createOrder' %}">
-     <input type="search" id="myInput" onkeyup="myFunction()" placeholder="Search by keyword..." title="Type in a name" style="height: 52px; width: 300px; ">
+     
       <ul class="nav navbar-nav navbar-right" >
         <li><a href = "/" class="btn btn-default btn-lg active" role="button">Home</a></li>
         {% if auth %}
         <li><a href = "/people/" class="btn btn-default btn-lg active" role = "button">People</a></li>
-        <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">Trips</a></li>
+        <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">My Trips</a></li>
+        <li><a href = "/activetrips/" class="btn btn-default btn-lg active" role = "button">Active Trips</a></li>
         <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
         <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
