Have search working for trip, working on order

--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -52,6 +52,10 @@
             <button class="btn btn-default" type="submit" id="navSearchSubmit"><i class="glyphicon glyphicon-search"></i></button>
         </div>
     </div>
+    <select name="search">
+    	<option value="Trip"> Trip</option>
+    	<option value="Order"> Order </option>
+    </select>
     </form>
   </div>
 
