Added search person and cleaned up some other stuff

--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -53,8 +53,9 @@
         </div>
     </div>
     <select name="search">
-    	<option value="Trip"> Trip</option>
+    	<option value="Trip"> Trip </option>
     	<option value="Order"> Order </option>
+      <option value="Person"> Person </option>
     </select>
     </form>
   </div>
