--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -27,6 +27,7 @@
         <li><a href = "/people/" class="btn btn-default btn-lg active" role = "button">People</a></li>
         <li><a href = "/trips/" class="btn btn-default btn-lg active" role = "button">My Trips</a></li>
         <li><a href = "/activetrips/" class="btn btn-default btn-lg active" role = "button">Active Trips</a></li>
+        <li><a href = "/myorders/" class="btn btn-default btn-lg active" role = "button">My Orders</a></li>
         <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
         <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
