--- a/web/myapp/templates/trip_detail_view.html
+++ b/web/myapp/templates/trip_detail_view.html
@@ -5,8 +5,11 @@
   <p><strong>Store:</strong> {{ store }}</p> 
   <p><strong>Time_created:</strong> {{ time_created }}</p> 
   <p><strong>Active:</strong> {{ active }}</p> 
-  <!-- <p><strong>Orders:</strong> {{ orders }}</p> -->
-
+  <p><strong>Orders:</strong></p>
+{% for item in orders %}
+	<p><a href="../order/{{ item }}">Order</a></p>
+{% endfor %}
+<br>
 {% if name == runner and active == True %}
 	<h1> <a href="{{ url }}", class="button">End Trip</a> </h1>
 {% endif %}
