selenium kinda working

--- a/web/myapp/templates/index.html
+++ b/web/myapp/templates/index.html
@@ -12,7 +12,7 @@
 <h1> Hello {{username}}! </h1>
 {% endif %}
 
-<h2>Welcome to Goombay Smash Beer Delivery!</h2>
+<h2 id ="welcome">Welcome to Goombay Smash Beer Delivery!</h2>
 <h3>This is the worlds number one beer delivery service!</h3>
 <h4>Grabbing a case? See who else needs one! Or get notified when a friend is going out for a run.</h4>
 
