--- a/web/myapp/templates/login.html
+++ b/web/myapp/templates/login.html
@@ -12,11 +12,11 @@
 
 <div>
   <td>{{ form.username.label_tag }}</td>
-  <td>{{ form.username }}</td>
+  <td id="username">{{ form.username }}</td>
 </div>
 <div>
   <td>{{ form.password.label_tag }}</td>
-  <td>{{ form.password }}</td>
+  <td id="password">{{ form.password }}</td>
 </div>
 
 <div>
