Selenium tests working local

--- a/web/myapp/templates/login.html
+++ b/web/myapp/templates/login.html
@@ -20,7 +20,7 @@
 </div>
 
 <div>
-  <input type="submit" value="login" />
+  <input type="submit" value="login" id = "login" />
   <input type="hidden" name="next" value="{{ next }}" />
 </div>
 </form>
