--- a/web/myapp/templates/signup.html
+++ b/web/myapp/templates/signup.html
@@ -25,7 +25,7 @@
 
 
 <div>
-  <input type="submit" value="Sign Up" />
+  <input type="submit" id = "button" value="Sign Up" />
   <input type="hidden" name="next" value="{{ next }}" />
 </div>
 </form>
