--- a/web/myapp/templates/tripForm.html
+++ b/web/myapp/templates/tripForm.html
@@ -15,7 +15,7 @@
 </div>
 {% endfor %}
 <div>
-  <input type="submit" value="Make Trip" />
+  <input type="submit" id = "createTripButton" value="Make Trip" />
   <input type="hidden" name="next" value="{{ next }}" />
 </div>
 </form>
