--- a/web/myapp/templates/base_generic.html
+++ b/web/myapp/templates/base_generic.html
@@ -31,7 +31,7 @@
         <li><a href = "/orders/" class="btn btn-default btn-lg active" role = "button">Orders</a></li>
         <li><a href = "/beers/" class="btn btn-default btn-lg active" role = "button">Beers</a></li>
         <li><a href = "/stores/" class="btn btn-default btn-lg active" role = "button">Stores</a></li>
-        <li><a href = "/trip/create/" class="btn btn-default btn-lg active" role = "button">Create Trip</a></li>
+        <li id = "createTrip"><a href = "/trip/create/" class="btn btn-default btn-lg active" role = "button">Create Trip</a></li>
         <li><a href = "/order/create/" class="btn btn-default btn-lg active" role = "button">Create Order</a></li>       
         <li><a href = "/logout/" class="btn btn-default btn-lg active" role = "button">Logout</a></li>
  
